--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1533,3 +1533,15 @@ keywords = "Meta-learning systems "
   pages =       "1042--1048",
   \URL =         "http://dx.doi.org/10.1016/j.patrec.2012.01.015",
 }
+
+@InCollection{Mitchell:1980,
+  author =       "Mitchell, Tom M.",
+  title =        "The Need for Biases in Learning Generalizations",
+  booktitle =    "Readings in Machine Learning",
+  publisher =    "Morgan Kauffman",
+  year =         "1980",
+  editor =    "Shavlik, Jude W. and Dietterich, Thomas G.",
+  pages =     "184--191",
+  \url = "http://www.cs.nott.ac.uk/~bsl/G52HPA/articles/Mitchell:80a.pdf",
+  note = "Book published in 1990."
+}
