--- a/stratDistsRedux.tex
+++ b/stratDistsRedux.tex
@@ -1,16 +1,30 @@
 \begin{table}[h]
 \caption{Similaridade entre estratégias de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,50$ estão em negrito.}
-\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|c}
- 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}EERent\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}\textbf{SGmulti}\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}\textbf{ATUman}\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}\textbf{ATUmah}\end{sideways} \\Rnd	& - & \textcolor{blue}{\textbf{  0.67}} &   0.39 &   0.47 & \textbf{  0.50} & \textbf{  0.58} &   0.25 &   0.39 & \textbf{  0.54} & \textcolor{red}{\textbf{  0.20}} &   0.21 \\
-Clu	& \textcolor{blue}{\textbf{  0.67}} & - &   0.38 &   0.48 & \textbf{  0.51} & \textbf{  0.56} &   0.25 &   0.40 & \textbf{  0.57} & \textcolor{red}{\textbf{  0.20}} &   0.21 \\ \hline
-Mar	&   0.39 &   0.38 & - &   0.41 &   0.42 &   0.40 &   0.27 & \textcolor{blue}{\textbf{  0.54}} &   0.36 &   0.21 & \textcolor{red}{\textbf{  0.20}} \\
-EERent	&   0.47 & \textcolor{blue}{\textbf{  0.48}} &   0.41 & - &   0.46 &   0.44 &   0.25 &   0.41 &   0.41 & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} \\ \hline
-EERacu	& \textbf{  0.50} & \textcolor{blue}{\textbf{  0.51}} &   0.42 &   0.46 & - &   0.47 &   0.25 &   0.41 &   0.44 & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} \\
-\textbf{SGmulti}	& \textcolor{blue}{\textbf{  0.58}} & \textbf{  0.56} &   0.40 &   0.44 &   0.47 & - &   0.25 &   0.41 & \textbf{  0.51} & \textcolor{red}{\textbf{  0.20}} &   0.21 \\ \hline
-DWeuc	&   0.25 &   0.25 & \textcolor{blue}{\textbf{  0.27}} &   0.25 &   0.25 &   0.25 & - &   0.26 &   0.23 &   0.18 & \textcolor{red}{\textbf{  0.17}} \\
-TUman	&   0.39 &   0.40 & \textcolor{blue}{\textbf{  0.54}} &   0.41 &   0.41 &   0.41 &   0.26 & - &   0.40 &   0.21 & \textcolor{red}{\textbf{  0.20}} \\ \hline
-\textbf{ATUman}	& \textbf{  0.54} & \textcolor{blue}{\textbf{  0.57}} &   0.36 &   0.41 &   0.44 & \textbf{  0.51} &   0.23 &   0.40 & - & \textcolor{red}{\textbf{  0.20}} &   0.21 \\
-TUmah	&   0.20 &   0.20 &   0.21 &   0.21 &   0.21 &   0.20 & \textcolor{red}{\textbf{  0.18}} &   0.21 &   0.20 & - & \textcolor{blue}{\textbf{  0.38}} \\ \hline
-\textbf{ATUmah}	&   0.21 &   0.21 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 &   0.21 & \textcolor{blue}{\textbf{  0.38}} & - \\\end{tabular}}\label{stratDistsRedux}
+\begin{center}\scalebox{0.8}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|cc|cc|cc|cc}
+ 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}\textbf{ATUeuc}\end{sideways} & \begin{sideways}\textbf{ATUman}\end{sideways} & \begin{sideways}\textbf{ATUmah}\end{sideways} & \begin{sideways}Ent\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}\textbf{SGmulti}\end{sideways} & \begin{sideways}\textbf{SGmulti}\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}EERent\end{sideways} & \begin{sideways}\textbf{GATUeuc}\end{sideways} & \begin{sideways}\textbf{GATUman}\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}\textbf{GATUmah}\end{sideways} & \begin{sideways}SVMLkff\end{sideways} & \begin{sideways}SVMLbal\end{sideways} & \begin{sideways}SVMLsim\end{sideways} & \begin{sideways}SVMLsel\end{sideways} & \begin{sideways}EMC\end{sideways} & \begin{sideways}QBC\end{sideways} \\Rnd	& - & \textcolor{
+blue}{\textbf{  0.63}} &   0.11 & \textbf{  0.55} &   0.44 &   0.11 &   0.11 &   0.10 &   0.09 &   0.11 &   0.11 &   0.06 &   0.11 &   0.10 &   0.07 &   0.10 &   0.18 &   0.15 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\
+Clu	& \textcolor{blue}{\textbf{  0.63}} & - &   0.11 & \textbf{  0.57} &   0.44 &   0.11 &   0.11 &   0.10 &   0.09 &   0.11 &   0.11 &   0.06 &   0.11 &   0.10 &   0.07 &   0.10 &   0.18 &   0.15 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\ \hline
+\textbf{ATUeuc}	& \textcolor{blue}{\textbf{  0.11}} & \textcolor{blue}{\textbf{  0.11}} & - & \textcolor{blue}{\textbf{  0.11}} & \textcolor{blue}{\textbf{  0.11}} &   0.08 &   0.08 &   0.08 &   0.09 &   0.08 &   0.08 &   0.06 &   0.08 &   0.08 &   0.07 &   0.08 &   0.09 &   0.09 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\
+\textbf{ATUman}	& \textbf{  0.55} & \textcolor{blue}{\textbf{  0.57}} &   0.11 & - &   0.46 &   0.11 &   0.11 &   0.10 &   0.09 &   0.11 &   0.11 &   0.06 &   0.11 &   0.10 &   0.07 &   0.10 &   0.18 &   0.15 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\ \hline
+\textbf{ATUmah}	&   0.44 &   0.44 &   0.11 & \textcolor{blue}{\textbf{  0.46}} & - &   0.11 &   0.11 &   0.10 &   0.09 &   0.11 &   0.11 &   0.06 &   0.11 &   0.10 &   0.07 &   0.10 &   0.18 &   0.16 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\
+Ent	&   0.11 &   0.11 &   0.08 &   0.11 &   0.11 & - & \textcolor{blue}{\textbf{  0.54}} &   0.24 &   0.13 &   0.44 &   0.38 &   0.07 &   0.31 &   0.25 &   0.09 &   0.22 &   0.11 &   0.10 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\ \hline
+Mar	&   0.11 &   0.11 &   0.08 &   0.11 &   0.11 & \textcolor{blue}{\textbf{  0.54}} & - &   0.24 &   0.13 & \textcolor{blue}{\textbf{  0.54}} &   0.39 &   0.07 &   0.31 &   0.24 &   0.09 &   0.22 &   0.11 &   0.10 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\
+DWeuc	&   0.10 &   0.10 &   0.08 &   0.10 &   0.10 & \textcolor{blue}{\textbf{  0.24}} & \textcolor{blue}{\textbf{  0.24}} & - &   0.12 &   0.23 &   0.23 &   0.07 &   0.21 &   0.19 &   0.09 &   0.18 &   0.10 &   0.10 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\ \hline
+TUeuc	&   0.09 &   0.09 &   0.09 &   0.09 &   0.09 &   0.13 &   0.13 &   0.12 & - & \textcolor{blue}{\textbf{  0.14}} &   0.13 &   0.08 &   0.13 &   0.13 &   0.11 &   0.13 &   0.09 &   0.09 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\
+TUman	&   0.11 &   0.11 &   0.08 &   0.11 &   0.11 &   0.44 & \textcolor{blue}{\textbf{  0.54}} &   0.23 &   0.14 & - &   0.41 &   0.07 &   0.31 &   0.24 &   0.09 &   0.23 &   0.11 &   0.10 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\ \hline
+\textbf{SGmulti}	&   0.11 &   0.11 &   0.08 &   0.11 &   0.11 &   0.38 &   0.39 &   0.23 &   0.13 & \textcolor{blue}{\textbf{  0.41}} & - &   0.07 &   0.36 &   0.26 &   0.09 &   0.22 &   0.11 &   0.10 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\
+\textbf{SGmulti}	&   0.06 &   0.06 &   0.06 &   0.06 &   0.06 &   0.07 &   0.07 &   0.07 & \textcolor{blue}{\textbf{  0.08}} &   0.07 &   0.07 & - &   0.07 &   0.07 & \textcolor{blue}{\textbf{  0.08}} &   0.07 &   0.06 &   0.06 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\ \hline
+EERacu	&   0.11 &   0.11 &   0.08 &   0.11 &   0.11 &   0.31 &   0.31 &   0.21 &   0.13 &   0.31 & \textcolor{blue}{\textbf{  0.36}} &   0.07 & - &   0.35 &   0.09 &   0.26 &   0.11 &   0.10 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\
+EERent	&   0.10 &   0.10 &   0.08 &   0.10 &   0.10 &   0.25 &   0.24 &   0.19 &   0.13 &   0.24 &   0.26 &   0.07 & \textcolor{blue}{\textbf{  0.35}} & - &   0.09 &   0.26 &   0.11 &   0.10 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\ \hline
+\textbf{GATUeuc}	&   0.07 &   0.07 &   0.07 &   0.07 &   0.07 &   0.09 &   0.09 &   0.09 & \textcolor{blue}{\textbf{  0.11}} &   0.09 &   0.09 &   0.08 &   0.09 &   0.09 & - &   0.09 &   0.07 &   0.07 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\
+\textbf{GATUman}	&   0.10 &   0.10 &   0.08 &   0.10 &   0.10 &   0.22 &   0.22 &   0.18 &   0.13 &   0.23 &   0.22 &   0.07 & \textcolor{blue}{\textbf{  0.26}} & \textcolor{blue}{\textbf{  0.26}} &   0.09 & - &   0.11 &   0.11 & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\ \hline
+TUmah	&   0.18 &   0.18 &   0.09 &   0.18 &   0.18 &   0.11 &   0.11 &   0.10 &   0.09 &   0.11 &   0.11 &   0.06 &   0.11 &   0.11 &   0.07 &   0.11 & - & \textcolor{blue}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\
+\textbf{GATUmah}	&   0.15 &   0.15 &   0.09 &   0.15 &   0.16 &   0.10 &   0.10 &   0.10 &   0.09 &   0.10 &   0.10 &   0.06 &   0.10 &   0.10 &   0.07 &   0.11 & \textcolor{blue}{\textbf{  0.23}} & - & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} \\ \hline
+SVMLkff	& \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & - & \textcolor{blue}{\textbf{  0.74}} &   0.49 &   0.37 &   0.04 &   0.03 \\
+SVMLbal	& \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.74}} & - & \textbf{  0.53} &   0.39 &   0.04 &   0.03 \\ \hline
+SVMLsim	& \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} &   0.49 & \textbf{  0.53} & - & \textcolor{blue}{\textbf{  0.58}} &   0.04 &   0.03 \\
+SVMLsel	& \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} &   0.37 &   0.39 & \textcolor{blue}{\textbf{  0.58}} & - &   0.04 &   0.03 \\ \hline
+EMC	& \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.04}} & - &   0.03 \\
+QBC	& \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.03}} & - \\ \hline\end{tabular}}\label{stratDistsRedux}
 \end{center}
 \end{table}
