comeÃ§o do PRESS

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1193,10 +1193,8 @@ year = {2006}
 }
 
 @Article{journals/ijon/HeeswijkMOL11,
-  title =       "{GPU}-accelerated and parallelized {ELM} ensembles for
-                 large-scale regression",
-  author =      "Mark van Heeswijk and Yoan Miche and Erkki Oja and
-                 Amaury Lendasse",
+  title =       "{GPU}-accelerated and parallelized {ELM} ensembles for large-scale regression",
+  author =      "Mark Heeswijk and Yoan Miche and Erkki Oja and Amaury Lendasse",
   journal =     "Neurocomputing",
   year =        "2011",
   number =      "16",
@@ -1544,4 +1542,42 @@ keywords = "Meta-learning systems "
   pages =     "184--191",
   \url = "http://www.cs.nott.ac.uk/~bsl/G52HPA/articles/Mitchell:80a.pdf",
   note = "Book published in 1990."
+}
+
+@Article{journals/tit/Bartlett98,
+  title =       "The Sample Complexity of Pattern Classification with
+                 Neural Networks: The Size of the Weights is More
+                 Important than the Size of the Network",
+  author =      "Peter L. Bartlett",
+  journal =     "IEEE Transactions on Information Theory",
+  year =        "1998",
+  number =      "2",
+  volume =      "44",
+  bibdate =     "2011-10-31",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/tit/tit44.html#Bartlett98",
+  pages =       "525--536",
+  \URL =         "http://dx.doi.org/10.1109/18.661502",
+}
+
+@article{allan1974relationship,
+  title={The relationship between variable selection and prediction},
+  author={Allan, D},
+  journal={Technometrics},
+  volume={16},
+  pages={125--127},
+  year={1974}
+}
+
+@Article{journals/tnn/FengHLG09,
+  title =       "Error Minimized Extreme Learning Machine With Growth of Hidden Nodes and Incremental Learning",
+  author =      "Guorui Feng and Guang-Bin Huang and Qingping Lin and Robert Kheng Leng Gay",
+  journal =     "IEEE Transactions on Neural Networks",
+  year =        "2009",
+  number =      "8",
+  volume =      "20",
+  bibdate =     "2010-09-16",
+  bibsource =   "DBLP, http://dblp.uni-trier.de/db/journals/tnn/tnn20.html#FengHLG09",
+  pages =       "1352--1357",
+  \URL =         "http://dx.doi.org/10.1109/TNN.2009.2024147",
 }
